Cambios para las excepciones y errores